--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Blog
 tagline: Bangundwir
-description: Content-focused template for a blog hosted on GitHub Pages.
+description: Blog ini sebagai wadah untuk menceritakn apapun yang ingin ceritakan
 url: https://blog.banguncenter.my.id/
 
 author:
