--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Blog
-tagline: Bangundwir
+tagline: BangunCenter
 description: Blog ini sebagai wadah untuk menceritakn apapun yang ingin ceritakan
 url: https://blog.banguncenter.my.id/
 
 author:
-  name: Bangundwir
+  name: BangunCenter
   url: https://twitter.com/bangundwir
   email: bangundwir@gmail.com
 
